--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Succinct ID Generator</title>
-  </head>
-  <body class="bg-zinc-900 text-white">
-    <div id="root" class="min-h-screen flex items-center justify-center p-4"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>ID</title></head><body><div id='root'></div></body></html>
